2-my-wx-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wx-app-fe
spec:
  selector:
    matchLabels:
      app: my-wx-app-fe       # deployment manages pods that have this label
  replicas: 1
  template:
    metadata:
      labels:
        app: my-wx-app-fe
        version: '14'
    spec:
      containers:
      - name: my-wx-app-fe
        image: arvindgorur/my-wx-app-fe:14
        resources:
          limits:
            cpu: "0.1"
          requests:
            cpu: "0.05"
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wx-app-fe-new
spec:
  selector:
    matchLabels:
      app: my-wx-app-fe       # deployment manages pods that have this label
  replicas: 1
  template:
    metadata:
      labels:
        app: my-wx-app-fe
        version: '15'
    spec:
      containers:
      - name: my-wx-app-fe
        image: arvindgorur/my-wx-app-fe:15
        resources:
          limits:
            cpu: "0.1"
          requests:
            cpu: "0.05"
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
      affinity:
        podAntiAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: version
                    operator: In
                    values:
                      - '14'
                  - key: app
                    operator: In
                    values:
                      - my-wx-app-fe
              topologyKey: "kubernetes.io/hostname"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wx-app-be
spec:
  selector:
    matchLabels:
      app: my-wx-app-be
  replicas: 1
  template:
    metadata:
      labels:
        app: my-wx-app-be       # deployment manages pods that have this label
        version: '14'
    spec:
      containers:
      - name: my-wx-app-be
        image: arvindgorur/my-wx-app-be:14
        resources:
          limits:
            cpu: "0.1"
          requests:
            cpu: "0.05"
        ports:
          - containerPort: 8081
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: version
                    operator: In
                    values:
                      - '14'
                  - key: app
                    operator: In
                    values:
                      - my-wx-app-fe
              topologyKey: "kubernetes.io/hostname"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wx-app-be-new
spec:
  selector:
    matchLabels:
      app: my-wx-app-be       # deployment manages pods that have this label
  replicas: 1
  template:
    metadata:
      labels:
        app: my-wx-app-be
        version: '15'
    spec:
      containers:
      - name: my-wx-app-be
        image: arvindgorur/my-wx-app-be:15
        resources:
          limits:
            cpu: "0.1"
          requests:
            cpu: "0.05"
        ports:
          - containerPort: 8081
        livenessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
      affinity:
        podAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            - labelSelector:
                matchExpressions:
                  - key: version
                    operator: In
                    values:
                      - '15'
                  - key: app
                    operator: In
                    values:
                      - my-wx-app-fe
              topologyKey: "kubernetes.io/hostname"
