my-wx-app-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wx-app-fe
spec:
  selector:
    matchLabels:
      app: my-wx-app-fe
  replicas: 4
  template:
    metadata:
      labels:
        app: my-wx-app-fe
    spec:
      containers:
      - name: my-wx-app-fe
        image: arvindgorur/my-wx-app-fe:latest
        ports:
          - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-wx-app-be
spec:
  selector:
    matchLabels:
      app: my-wx-app-be
  replicas: 4
  template:
    metadata:
      labels:
        app: my-wx-app-be
    spec:
      containers:
      - name: my-wx-app-be
        image: arvindgorur/my-wx-app-be:latest
        ports:
          - containerPort: 8081
          httpGet:
            path: /health
            port: 3000
          initialDelaySeconds: 10
          periodSeconds: 5
          successThreshold: 1
          failureThreshold: 5
