1-my-wx-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-wx-app-fe-service
spec:
  ports:
  - port: 80
    name: http
    protocol: TCP
    targetPort: 3000
    nodePort: 30077
  type: NodePort
  selector:
    app: my-wx-app-fe     # pod labels the service applies to
---
apiVersion: v1
kind: Service
metadata:
  name: my-wx-app-be-service
spec:
  ports:
  - port: 8081
    name: http-be
    protocol: TCP
    targetPort: 8081
    nodePort: 30078
  type: NodePort
  selector:
    app: my-wx-app-be     # pod labels the service applies to
