my-wx-app-service.yml
apiVersion: v1
kind: Service
metadata:
  name: my-wx-app-fe-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 3000
  type: NodePort
  selector:
    app: my-wx-app-fe
---
apiVersion: v1
kind: Service
metadata:
  name: my-wx-app-be-service
spec:
  ports:
  - port: 8081
    protocol: TCP
    targetPort: 8081
  type: NodePort
  selector:
    app: my-wx-app-be
