3-istio-gateway-virtualservice.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: my-wx-app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
    name: my-wx-app-fe-vs
    namespace: default
spec:
    hosts:
    - "*"
    gateways:
    - my-wx-app-gateway
    http:
    - route:
        - destination:
            host: my-wx-app-fe-service.default.svc.cluster.local

# ---
# apiVersion: networking.istio.io/v1alpha3
# kind: VirtualService
# metadata:
#     name: my-wx-app-be
# spec:
#     hosts:
#     - my-wx-app-be-service.default.svc.cluster.local
#     http:
#     - route:
#         - destination:
#             host: my-wx-app-be-service
